style.css
/* ... */
.package-item {
    background: var(--font-text);
    border-radius: 8px;
}

.package-center-item {
    width: 538px;
    height: 200px;
}

.package-item-title {
    width: 100%;
    height: 50px;
    display: flex;
    align-items: center;
    color: var(--font-text);
    font-weight: bold;
    font-size: 14px;
    line-height: 18px;
    background: var(--website-color);
    border-radius: 4px 4px 0px 0px;
}

.package-item-title>span {
    margin-left: 24px;
}

.package-item-body {
    height: 96px;
    width: 479px;
    font-size: 12px;
    margin: 27px 35px 27px 24px;
    display: flex;
    justify-content: space-around;
}

.column1 {
    display: flex;
    flex-direction: column;
    width: 269px;
}

.items {
    display: flex;
    align-items: center;
    margin-bottom: 21px;
}

.items>img {
    height: 18px;
    width: 18px;
    margin-right: 21px;
}

.items-offer {
    display: flex;
    align-items: flex-start;
    height: 103px;
}

.items-offer>img {
    height: 18px;
    width: 18px;
    margin-right: 21px;
}

.offer-valid-date {
    display: flex;
    flex-direction: column;
}

.offer-valid-date>span:nth-child(2) {
    margin-top: 40px;
    font-style: italic;
    font-size: 10px;
}

.package-summery-details {
    height: 550px;
    margin-top: 33px;
}

.package-details-item-body {
    margin: 38px 85px 58px 24px;
    height: 404px;
    font-size: 12px;
}

.package-details-item {
    height: 239px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 43px;
}

.items-title {
    color: var(--font-second-color);
    font-size: 13px;
    line-height: 16px;
    font-weight: 600;
}

.line {
    width: 1048px;
    border: 1px dashed #E0E0E0;
}

.package-details-bottom {
    margin-top: 32px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}


/****************** OTHER-PACKAGES ******************/

.other-packages {
    margin-top: 65px;
    height: 1250px;
}

.other-packages-title {
    font-weight: bold;
    font-size: 36px;
    line-height: 45px;
    text-align: center;
}

.item1 {
    grid-column: 1/3;
    border-radius: 8px;
    display: flex;
    flex-direction: row;
}

.item1>img {
    height: 500px;
    width: 366px;
}

.item2 {
    border-radius: 8px;
    display: flex;
    flex-direction: column;
}

.item2>img {
    width: 350px;
    height: 250px;
}

.container {
    width: 100%;
    height: 1030px;
    display: grid;
    grid-template-columns: 350px 350px 350px;
    grid-template-rows: 500px 500px;
    grid-gap: 30px;
    margin-top: 65px;
}

.information {
    width: 364px;
    background-color: var(--website-color);
    color: var(--font-text);
    border-radius: 0px 8px 8px 0px;
}

.information-container {
    height: 424px;
    margin: 46px 21px 30px 44px;
}

.title {
    display: flex;
    flex-direction: column;
    font-size: 18px;
    line-height: 23px;
}

.title>img {
    width: 48px;
    height: 8px;
    margin-bottom: 5px;
}

.text {
    margin-top: 27px;
    font-size: 14px;
    line-height: 160.6%;
}

.info-person-room {
    font-size: 12px;
    line-height: 15px;
    margin-top: 34px;
}

.info-person-room-item {
    margin-bottom: 11px;
}

.info-person-room-item>img {
    width: 14px;
    height: 14px;
    margin-right: 14px;
}

.info-bottom {
    margin-top: 37px;
}

.price-deleted {
    text-decoration: line-through;
    font-size: 14px;
    line-height: 18px;
}

.price {
    font-weight: bold;
    font-size: 24px;
    line-height: 30px;
}

.book-now-btn {
    border-radius: 4px;
    width: 120px;
    height: 40px;
    background: var(--font-second-color);
    border: none;
    color: var(--font-text);
}

.price-btn {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.info {
    height: 250px;
    background-color: var(--website-color);
    color: var(--font-text);
    border-radius: 0px 0px 8px 8px;
}

.info-container {
    margin: 30px 21px 25px 32px;
}


/****************** GUEST-REVIEW ******************/

.guest-review {
    height: 550px;
    display: flex;
    align-items: center;
    flex-direction: column;
}

.guest-review-title {
    text-align: center;
    font-weight: bold;
    font-size: 36px;
    line-height: 45px;
}

.package-card {
    width: 731px;
    height: 325px;
    margin-top: 70px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.arrows {
    width: 1074px;
    height: 30px;
    top: 3448px;
    position: absolute;
    display: flex;
    justify-content: space-between;
}

.profile-card {
    width: 97px;
    height: 149px;
    margin-bottom: -104px;
    z-index: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.package-card-bg {
    width: 731px;
    height: 280px;
    background: var(--font-text);
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    position: relative;
    align-items: center;
}

.profile-card-name {
    color: var(--font-second-color);
    font-weight: bold;
    font-size: 12px;
    line-height: 15px;
    margin: 9px 0 10px 0;
}

.profile-card-date {
    font-size: 9px;
    line-height: 13px;
}

.package-card-body {
    width: 537px;
    height: 114px;
    font-size: 12px;
    line-height: 160%;
    text-align: justify;
    margin-bottom: 29.96px;
    position: absolute;
    bottom: 0;
}

.card-bg {
    width: 607px;
    height: 153.49px;
    position: absolute;
    top: 0;
    margin-top: 12.8px;
}


/****************** NEWSLETTER ******************/

.newsletter {
    width: 1440px;
    height: 260px;
    color: var(--font-text);
}

.newsletter-bg {
    width: 100%;
    height: 100%;
    background: url("img/newsletter-bg.svg");
    position: relative;
}

.layer {
    background-color: rgba(10, 34, 61, 0.8);
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}
/* ... */

